# content-optimizer

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  careerv0.md  pyproject.toml  skills-map.md
cli/: core.py
cli/evals/: __init__.py  density_check.py  page_count_check.py  resume_eval.py
cli/schemas/: resume.py
templates/cover-letter/: primary.tex.j2
templates/resume/: primary.tex.j2
templates/resume/original/: jakegut.tex
